# life

./: CONTRIBUTING.md  Cargo.toml  README.md  lcov.info
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  updater.yml
src/: main.rs
src/sim/: cache.rs  color.rs  graph.rs  mod.rs  rules.rs  types.rs
src/sim/grid_node/: mod.rs  paint.rs
