[package]
name = "life"
version = "0.1.0"
edition = "2021"
description = "Game Of Life"
repository = "https://github.com/erikwilson/life"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
ansi_term = "0"
